--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,32 @@ body {
     text-decoration: underline;
 }
 
+.list-features {
+    list-style: circle;
+    text-align: start;
+    margin-left: 2rem;
+}
+
+.list-features .sub-index {
+    margin-left: 1.5rem;
+}
+
+table {
+    width: fit-content;
+    margin-inline: auto;
+}
+table td:first-child {
+    border-right: var(--fbc-borders);
+}
+
+table th, table td {
+    border-bottom: var(--fbc-borders);
+}
+
+table tr:last-child td {
+    border-bottom: none;
+}
+
 .box {
     width: 40rem;
     color: rgb(0, 0, 0);
